package blackhole;

option java_package = "com.dp.blackhole.common.gen";
option java_outer_classname = "DumpReplyPB";

message DumpReply{
    required string reply = 1;
}