package blackhole;

option java_package = "com.dp.blackhole.protocol.control";
option java_outer_classname = "RecoveryRollPB";

message RecoveryRoll {
    required string topic = 1;
    required string broker_server = 2;
    required int64 roll_ts = 3;
    required int32 recovery_port = 4;
    optional string instance_id = 5;
    optional bool is_final = 6;
}