package blackhole;

option java_package = "com.dp.blackhole.protocol.control";
option java_outer_classname = "RestartPB";

message Restart {
    repeated string agent_servers = 1;
}